--- a/setup/config/systemd/hauntedtiles.service
+++ b/setup/config/systemd/hauntedtiles.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Gunicorn instance to serve Haunted Tiles
+Description=Gunicorn instance to serve haunted-tiles
 After=network.target
 
 [Service]
@@ -7,7 +7,7 @@ User=hauntedtiles
 Group=www-data
 WorkingDirectory=/home/hauntedtiles/haunted-tiles
 Environment="PATH=/home/hauntedtiles/haunted-tiles/venv/bin"
-ExecStart=/home/hauntedtiles/haunted-tiles/venv/bin/gunicorn --workers 3 --bind unix:hauntedtiles.sock -m 007 wsgi:app
+ExecStart=/home/hauntedtiles/haunted-tiles/venv/bin/gunicorn --workers 3 --bind unix:haunted-tiles.sock -m 007 wsgi:app
 
 [Install]
 WantedBy=multi-user.target
